# axiom-gui

./: .gitignore  .vercelignore  AGENT_CONSOLE_VISION.md  DEPLOYMENT_FIX_SUMMARY.md  PRODUCTION_TESTING_CHECKLIST.md  PRODUCTION_TEST_RESULTS_2026-03-05.md  PRODUCTION_VALIDATION_2026-03-05.md  README.md  UI_REDESIGN_BRIEF.md  build-wasm.sh  debug-production.js  test-prod-headless.js  vercel.json  verify-production.js
axiom-agent/memory/: phase-3-5-camera-presets-animation-progress.md
axiom-renderer/: Cargo.toml  test_cif_real.rs
axiom-renderer/src/: animation.rs  camera.rs  cif_parser.rs  config.rs  context.rs  lib.rs  measurement.rs  molecule.rs  pdb_parser.rs  picking.rs  pipeline.rs  renderer.rs  structure.rs  wasm.rs  xyz_parser.rs
axiom-renderer/src/export/: mod.rs  png.rs  scene.rs  structure.rs
axiom-renderer/src/geometry/: mod.rs  molecule.rs
axiom-renderer/src/shaders/: atom.wgsl  bond.wgsl
axiom-renderer/tests/fixtures/: crambin-minimal.cif  quartz.cif  simple-cubic.cif
axiom-web/: DEPLOYMENT.md  README.md  build-output.txt  debug-production.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.preview.ts  playwright.config.production.ts  playwright.config.ts  test-local-axiom.js  test-webgl-support.js  vite.config.ts
axiom-web/.github/workflows/: playwright.yml
axiom-web/docs/: PERFORMANCE.md
axiom-web/playwright-report/: index.html
axiom-web/public/: 404.html
axiom-web/public/samples/: benzene.cif  simple-cubic.cif  water.cif
axiom-web/scripts/: capture-screenshots.js
axiom-web/src/: App.tsx  index.css
axiom-web/test-results/: .last-run.json
axiom-web/tests/: VISUAL_TESTING.md  debug-prod.spec.ts  production-smoke-test.spec.ts
src/components/: FileInfoPanel.tsx  RecentFilesList.tsx  Sidebar.tsx
src/hooks/: useRenderSettingsPersistence.ts
src/utils/: recentFiles.ts
(+64 files in other folders)
