[package]
name = "axiom-renderer"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disable automatic wasm-opt, we'll run it manually

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for native

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }  # For casting structs to byte slices
glam = "0.25"            # Math library (vectors, matrices)
png = "0.17"             # PNG encoding for screenshot export
serde = { version = "1.0", features = ["derive"] }  # Serialization for scene export
serde_json = "1.0"       # JSON serialization for scene export

# Native (non-WASM) dependencies - WebGPU backend for desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "0.19", features = ["wgsl"] }  # WebGPU backend for native

# WASM-specific dependencies - WebGL backend for browser compatibility
# CRITICAL: Using ONLY webgl backend (not webgpu) to avoid Chrome WebGPU incompatibilities
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19", features = ["webgl", "wgsl"] }  # WebGL backend ONLY for wasm32
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console",
] }
console_error_panic_hook = "0.1"  # Better panic messages in browser console

[dev-dependencies]
pollster = "0.3"  # For async executor in tests

[profile.release]
opt-level = 'z'       # Optimize for size (smaller than 's')
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization, slower compile
panic = 'abort'       # Smaller binary (no unwinding)
strip = true          # Remove debug symbols
